corrected alignment

--- a/style/style.css
+++ b/style/style.css
@@ -57,32 +57,33 @@ body {
 }
 
 .home {
+    display: block;
     margin: auto;
     width: (100vw - 20px);
     padding: 20px;
     padding-bottom: 0;
+    text-align: center;
 }
 
 .home-text h4 {
-    text-align: center;
     font-size: .8em;
     margin-bottom: 5px;
     color: #F8F7F980;
 }
 
 .home-text h1 {
-    text-align: center;
     font-size: 2.5em;
     margin-bottom: 5px;
 }
 
 
 .home-text p {
-    text-align: center;
-    width: 90%;
+    width: 280px;
     font-size: .7em;
     margin-bottom: 3.5em;
     color: #F8F7F980;
+    margin: auto;
+    margin-bottom: 3em;
 }
 
 .home-btn {
@@ -100,9 +101,10 @@ body {
 }
 
 .home .home-img {
-    width: 290px;
+    width: 280px;
+    margin: auto;
 }
 
 .home img {
-    width: 90%;
+    width: 100%;
 }
